Fixed feed ribbon issue (overlaps post/reply text)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
@@ -277,7 +277,7 @@
     .content-text {
         line-height: 22px;
         margin-bottom: 10px;
-        margin-right: 42px;
+        margin-right: 70px;
         -ms-word-break: break-word;
         word-break: break-word;
         white-space: pre-wrap;
